fix: Improve infowindow visibility on mobile

--- a/development/css/main.css
+++ b/development/css/main.css
@@ -29,10 +29,9 @@ a {
 button,
 [class*='button'] {
     background-color: rgba(255,255,255,0.0);
-    margin-top: 1em;
     padding: 1em;
     text-transform: uppercase;
-    font-size: .9em;
+    font-size: .7em;
     border: 2px solid #ffffff;
     cursor: pointer;
 }
@@ -97,7 +96,8 @@ select::-ms-expand {
  *MODULES
  **********************/
 .title {
-    font-size: 1.5em;
+    margin-top: 0;
+    font-size: 1em;
 }
 .map-container {
     position: fixed;
@@ -161,6 +161,7 @@ select::-ms-expand {
 }
 .sidebar {
     position: absolute;
+    top: 0;
     width: 100%;
     color: #ffffff;
     text-align: center;
@@ -171,7 +172,7 @@ select::-ms-expand {
     min-height: 100%;
 }
 [class*='section'] {
-    padding: 2em;
+    padding: 1em;
 }
 .section__black {
     background-color: rgba(0,0,0,.8);
@@ -291,7 +292,12 @@ select::-ms-expand {
     .mobile {
         display: none;
     }
+    button,
+    [class*='button'] {
+        font-size: .9em;
+    }
     .title {
+        margin: .67em 0;
         font-size: 2em;
     }
     [class*='section'] {
